mario.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-mario
  namespace: mario
spec:
  selector:
    app: mario
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario-dep
  namespace: mario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      name: mario-pod
      labels:
        app: mario
    spec:
      containers:
      - name: mario-con
        image: pengbai/docker-supermario
